@startuml
hide circle
skinparam linetype ortho

entity "users" as users {
  *id : bigint <<generated>>
  --
  name : varchar
  email : varchar <<unique>>
  password : varchar
  role : enum('user', 'admin')
  nim : varchar
  phone : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity "events" as events {
  *id : bigint <<generated>>
  --
  title : varchar
  slug : varchar <<unique>>
  description : text
  date : date
  time : time
  location : varchar
  organizer : varchar
  price : integer
  image_url : varchar
  is_completed : boolean
  certificate_template : varchar
  bank_name : varchar
  account_number : varchar
  account_holder : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity "tickets" as tickets {
  *id : bigint <<generated>>
  --
  *user_id : bigint <<FK>>
  *event_id : bigint <<FK>>
  status : enum('menunggu_konfirmasi', 'dikonfirmasi', 'ditolak')
  payment_proof : varchar
  ticket_code : varchar <<unique>>
  is_attended : boolean
  created_at : timestamp
  updated_at : timestamp
}

users ||..o{ tickets : "has"
events ||..o{ tickets : "has"

@enduml
